[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akumi"
version = "0.1.0"
description = "Official Python SDK for the Akumi EU-sovereign inference API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["mypy>=1.11", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/akumi"]

[tool.ruff]
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
